<resources>
    <string name="app_name">مكتبة زمزم الصوتية</string>

    <string name="RequestAcceptPermission">"Please Accept permission to Download this media \uD83D\uDE18"</string>
    <string name="AcceptedPermission">"Starting Download! \uD83D\uDE0D "</string>
    <string name="RefusedPermissin">"Permission refused! \uD83D\uDE14 "</string>
    <string name="ErrorDownload">"Please select media first! \uD83D\uDE14 "</string>
    <string name="noInternetConnection">"Sorry,No internet connection \uD83D\uDE14"</string>

    <string name="backExit">Press Back again to exit!</string>

    <string name="emptylist">Download list is empty!</string>

    <string name="home">Home</string>
    <string name="download">Download</string>
    <string name="recycler">Recycler</string>
    <string name="info">About</string>
    <string name="rate">Rate us</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="exit">Exit</string>
    <string name="comnicate">Comnication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_course">Course</string>
    <string name="title_activity_fragment_drawer">FragmentDrawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
